--- a/CoronaVaccine/.project
+++ b/CoronaVaccine/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CoronaVaccineApp</name>
+	<name>CoronaVaccine</name>
 	<comment></comment>
 	<projects>
 	</projects>
